--- a/.env
+++ b/.env
@@ -1,8 +1,14 @@
 PORT=3000
+HOSTER_URL=http://localhost:3000
+JWT_SECRET=vozec_secret_jwt_very_secure
+TEMPORARY_DELAY=7 # Days
+
 MONGODB_USER=admin
 MONGODB_PASSWORD=password
+
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin123
 ADMIN_PATH=/manager/
+
 API_PATH=/api
-API_KEY=payload_hoster_secret_api_key_2025
+API_KEY=first_api_key,second_api_key
