--- a/admin-frontend/package.json
+++ b/admin-frontend/package.json
@@ -12,11 +12,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-app-rewired": "^2.2.1",
+    "react-simple-code-editor": "^0.13.1",
     "react-syntax-highlighter": "^15.5.0",
     "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4"
